Added deploy script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A collection of theme toggles",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
+  "scripts": {
+    "deploySite": "git add site/out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix site/out origin gh-pages"
+  },
   "author": {
     "name": "Alfie Jones",
     "url": "https://alfie-jones.com"
