--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "theme-toggles",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A collection of theme toggles",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
+  "files": [
+    "build/"
+  ],
   "scripts": {
     "deploySite": "git add site/out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix site/out origin gh-pages"
   },
@@ -13,13 +16,17 @@
   },
   "peerDependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compress": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-contrib-cssmin": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-postcss": "^0.9.0",
     "postcss": "^8.3.5"
   },
   "dependencies": {}
