--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "theme-toggles",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A collection of theme toggles",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "files": [
     "build/",
-    "assets/svg/"
+    "assets/svgs/"
   ],
   "author": {
     "name": "Alfie Jones",
