--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theme-toggles/react",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "peerDependencies": {
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "clean-react": "rimraf src/toggles",
-    "build-react": "yarn clean-react && svgr --typescript --no-svgo --icon --expand-props none --template templates/button.js --out-dir src/toggles -- ../../assets/svgs",
+    "build-react": "yarn clean-react && svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button.js --out-dir src/toggles -- ../../assets/svgs",
     "types": "tsc --emitDeclarationOnly --outDir dist",
     "build": "node build.js",
     "dev": "microbundle watch --jsxFragment React.Fragment --jsx React.createElement --jsxImportSource react  --tsconfig ./configs/base.json"
