--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theme-toggles/react",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "peerDependencies": {
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@svgr/babel-plugin-transform-svg-component": "^6.2.0",
     "@svgr/cli": "^6.2.1",
+    "@types/react": "^17.0.39",
     "css-tree": "^2.0.4",
     "esbuild": "^0.14.21",
     "esbuild-css-modules-plugin": "^2.1.2",
