--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theme-toggles/react",
-  "version": "0.0.24",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "peerDependencies": {
@@ -12,9 +12,10 @@
   },
   "scripts": {
     "clean-react": "rimraf src/toggles",
-    "build-react": "yarn clean-react && svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button.js --out-dir src/toggles -- ../../assets/svgs",
+    "build-react": "svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button.js --out-dir src/toggles -- ./svgs/default",
+    "build-react-reversed": "svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button-reversed.js --out-dir src/toggles -- ./svgs/reversed",
     "types": "tsc --emitDeclarationOnly --outDir dist",
-    "build": "node build.js",
+    "build": "node scripts/copy.js && yarn clean-react && yarn build-react && yarn build-react-reversed && node ./scripts/build.js && yarn types",
     "dev": "microbundle watch --jsxFragment React.Fragment --jsx React.createElement --jsxImportSource react  --tsconfig ./configs/base.json"
   },
   "module": "dist/index.js",
@@ -33,6 +34,7 @@
     "css-tree": "^2.0.4",
     "esbuild": "^0.14.21",
     "esbuild-css-modules-plugin": "^2.1.2",
+    "fs-extra": "^10.0.1",
     "plugin": "^0.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
