--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theme-toggles/react",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "peerDependencies": {
@@ -13,7 +13,7 @@
   "scripts": {
     "clean-react": "rimraf src/toggles",
     "build-react": "svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button.js --out-dir src/toggles -- ./svgs/default",
-    "build-react-reversed": "svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button-reversed.js --out-dir src/toggles -- ./svgs/reversed",
+    "build-react-reversed": "svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button-reversed.js --index-template templates/index-template.js --out-dir src/toggles -- ./svgs/reversed",
     "types": "tsc --emitDeclarationOnly --outDir dist",
     "build": "node scripts/copy.js && yarn clean-react && yarn build-react && yarn build-react-reversed && node ./scripts/build.js && yarn types",
     "dev": "microbundle watch --jsxFragment React.Fragment --jsx React.createElement --jsxImportSource react  --tsconfig ./configs/base.json"
