--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "theme-toggles",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "description": "A collection of theme toggles",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "files": [
-    "build/",
+    "css/*.css",
+    "css/*.css.map",
     "assets/svgs/"
   ],
   "scripts": {},
