--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theme-toggles/react",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "peerDependencies": {
@@ -16,9 +16,10 @@
   },
   "scripts": {
     "clean-react": "rimraf src/toggles",
+    "clean-build": "rimraf css && rimraf dist",
     "build-react": "svgr --typescript --no-svgo --no-prettier --icon --expand-props none --template templates/button.js --out-dir src/toggles -- ./svgs/default",
     "types": "tsc --emitDeclarationOnly --outDir dist",
-    "build": "node scripts/copy.js && yarn clean-react && yarn build-react && node ./scripts/build.js && yarn types",
+    "build": "yarn clean-build && node scripts/copy.js && yarn clean-react && yarn build-react && node ./scripts/build.js && yarn types",
     "dev": "microbundle watch --jsxFragment React.Fragment --jsx React.createElement --jsxImportSource react  --tsconfig ./configs/base.json"
   },
   "module": "dist/index.js",
