--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theme-toggles/react",
-  "version": "3.6.1",
+  "version": "3.6.2",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
   "peerDependencies": {
@@ -32,6 +32,8 @@
   ],
   "sideEffects": false,
   "devDependencies": {
+    "@svgr/babel-plugin-add-jsx-attribute": "^6.0.0",
+    "@svgr/babel-plugin-remove-jsx-attribute": "^6.0.0",
     "@svgr/babel-plugin-transform-svg-component": "^6.2.0",
     "@svgr/cli": "^6.2.1",
     "@types/react": "^17.0.39",
