--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theme-toggles",
-  "version": "4.7.1",
+  "version": "4.7.2",
   "description": "A collection of theme toggles",
   "license": "MIT",
   "repository": "https://github.com/AlfieJones/theme-toggles",
@@ -8,6 +8,10 @@
     "css/*.css",
     "assets/svgs/"
   ],
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/alfiejones"
+  },
   "scripts": {},
   "author": {
     "name": "Alfie Jones",
