--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -36,10 +36,13 @@
   ],
   "sideEffects": false,
   "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/types": "^7.17.0",
     "@svgr/babel-plugin-add-jsx-attribute": "^6.0.0",
     "@svgr/babel-plugin-remove-jsx-attribute": "^6.0.0",
     "@svgr/babel-plugin-transform-svg-component": "^6.2.0",
     "@svgr/cli": "^6.2.1",
+    "@types/babel-core": "^6.25.7",
     "@types/react": "^17.0.39",
     "css-tree": "^2.0.4",
     "esbuild": "^0.14.21",
