--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "plop": "^3.1.1",
+    "prettier": "2.8.1",
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
