--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "gulp"
   },
   "funding": {
     "type": "github",
