--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,11 +44,11 @@
     "@storybook/testing-library": "^0.0.13",
     "@svgr/babel-plugin-add-jsx-attribute": "^6.0.0",
     "@svgr/cli": "^6.2.1",
-    "@svgr/core": "^6.5.1",
-    "@theme-toggles/core": "5.0.0",
+    "@svgr/core": "^6.5.1-rc.1",
+    "@theme-toggles/core": "5.0.0-rc.1",
     "@svgr/plugin-jsx": "^6.5.1",
     "@svgr/plugin-prettier": "^6.5.1",
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.0.26",
     "babel-loader": "^8.3.0",
     "esbuild": "^0.17.0",
     "gulp": "^4.0.2",
