added react 2 chromatic

--- a/.github/workflows/chromatic-core.yml
+++ b/.github/workflows/chromatic-core.yml
@@ -1,7 +1,7 @@
 # .github/workflows/chromatic.yml
 
 # Workflow name
-name: 'Chromatic'
+name: 'Chromatic Core'
 
 # Event for the workflow
 on: 
@@ -28,5 +28,5 @@ jobs:
         # Chromatic GitHub Action options
         with:
           # 👇 Chromatic projectToken, refer to the manage page to obtain it.
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN_CORE }}
           workingDir: ./packages/core
