--- a/.github/workflows/chromatic-core.yml
+++ b/.github/workflows/chromatic-core.yml
@@ -11,7 +11,7 @@ on:
 
 # List of jobs
 jobs:
-  chromatic-deployment:
+  chromatic-core-deployment:
     # Operating System
     runs-on: ubuntu-latest
     # Job steps
