--- a/.github/workflows/chromatic-react.yml
+++ b/.github/workflows/chromatic-react.yml
@@ -11,7 +11,7 @@ on:
 
 # List of jobs
 jobs:
-  chromatic-deployment:
+  chromatic-react-deployment:
     # Operating System
     runs-on: ubuntu-latest
     # Job steps
@@ -21,7 +21,7 @@ jobs:
         # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g. yarn, npm, pnpm
         run: yarn
       - name: build
-        run: npx lerna run build --scope=@theme-toggles/core
+        run: npx lerna run build --scope=@theme-toggles/react
         # 👇 Adds Chromatic as a step in the workflow
       - name: Publish to Chromatic
         uses: chromaui/action@v1
