--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
     "@algolia/autocomplete-preset-algolia": "^1.7.3",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@material/material-color-utilities": "^0.2.0",
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.3",
@@ -35,6 +36,7 @@
     "recma-nextjs-static-props": "^1.0.0",
     "rehype-mdx-title": "^2.0.0",
     "shiki": "^0.11.1",
+    "string-to-color": "^2.2.2",
     "tailwindcss": "^3.2.4",
     "theme-toggles": "^4.10.1",
     "unist-util-visit": "^4.1.1",
