--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.3",
+    "@radix-ui/react-slider": "^1.1.0",
     "@sindresorhus/slugify": "^2.1.1",
     "@tailwindcss/typography": "^0.5.8",
     "@theme-toggles/react": "5.0.0-rc.1",
@@ -27,6 +28,7 @@
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "7.8.1",
+    "highlight.js": "^11.7.0",
     "mdast-util-to-string": "^3.1.0",
     "mdx-annotations": "^0.1.1",
     "next": "^13.1.2",
