--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@algolia/autocomplete-core": "^1.7.3",
     "@algolia/autocomplete-preset-algolia": "^1.7.3",
@@ -21,6 +20,7 @@
     "@radix-ui/react-slider": "^1.1.0",
     "@sindresorhus/slugify": "^2.1.1",
     "@tailwindcss/typography": "^0.5.8",
+    "@theme-toggles/core": "5.0.0-rc.1",
     "@theme-toggles/react": "5.0.0-rc.1",
     "acorn": "^8.8.1",
     "algoliasearch": "^4.14.2",
@@ -32,16 +32,18 @@
     "mdast-util-to-string": "^3.1.0",
     "mdx-annotations": "^0.1.1",
     "next": "^13.1.2",
+    "next-mdx-remote": "^4.3.0",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recma-nextjs-static-props": "^1.0.0",
+    "rehype-highlight": "^6.0.0",
     "rehype-mdx-title": "^2.0.0",
     "shiki": "^0.11.1",
     "string-to-color": "^2.2.2",
     "tailwindcss": "^3.2.4",
     "theme-toggles": "^4.10.1",
-    "unist-util-visit": "^4.1.1",
+    "unist-util-visit": "^4.1.2",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
