--- a/website/package.json
+++ b/website/package.json
@@ -48,6 +48,7 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.7.1",
