--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,7 @@
     "build-storybook": "build-storybook",
     "plop": "plop",
     "build": "gulp",
+    "build-core": "gulp",
     "dev": "gulp dev"
   },
   "files": [
