--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cd .. & pnpm build & cd website & next build",
     "start": "next start",
     "lint": "next lint"
   },
