--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "chromatic": "chromatic --project-token=CHROMATIC_PROJECT_TOKEN",
-    "build": "lerna run build-core & pnpm lerna run build-frameworks",
-    "build-site": "pnpm build & pnpm -F @theme-toggles/next build"
+    "build": "lerna run build-core && pnpm lerna run build-frameworks",
+    "build-site": "pnpm build && pnpm -F @theme-toggles/website build"
   },
   "author": {
     "name": "Alfie Jones",
