--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,9 +21,10 @@
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.6",
-    "@storybook/html": "^6.5.15",
+    "@storybook/builder-webpack4": "^6.5.15",
+    "@storybook/manager-webpack4": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/html": "^6.5.15",
     "@types/node": "^18.11.18",
     "babel-loader": "^8.3.0",
     "clsx": "^1.2.1",
@@ -41,7 +42,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "overrides": {
     "clean-css": "5.3.1"
   }
