--- a/.github/workflows/chromatic-react.yml
+++ b/.github/workflows/chromatic-react.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install dependencies
         # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g. yarn, npm, pnpm
-        run: yarn
+        run: pnpm i
       - name: build core
         run: npx lerna run build --scope=@theme-toggles/core
       - name: build react
