--- a/.github/workflows/chromatic-core.yml
+++ b/.github/workflows/chromatic-core.yml
@@ -1,10 +1,10 @@
 # .github/workflows/chromatic.yml
 
 # Workflow name
-name: 'Chromatic Core'
+name: "Chromatic Core"
 
 # Event for the workflow
-on: 
+on:
   push:
     paths:
       - packages/core/**
