--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,7 @@
   "name": "@theme-toggles/website",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
