--- a/.github/workflows/pixeleye.yml
+++ b/.github/workflows/pixeleye.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Capture stories with Pixeleye
+        working-directory: packages/core
         run: npx lerna run storybook --scope=@theme-toggles/core & pnpm pixeleye storybook
