--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "lerna": "^6.4.1",
-    "next": "^13.1.2"
+    "next": "^13.1.2",
+    "pixeleye": "^0.0.20"
   }
 }
