--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "lerna": "^6.4.1",
     "next": "^13.1.2",
     "pixeleye": "^0.1.0"
+  },
+  "dependencies": {
+    "playwright": "^1.41.2"
   }
 }
