--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "lerna": "^6.4.1",
     "next": "^13.1.2",
-    "pixeleye": "^0.1.25"
+    "pixeleye": "0.2.0"
   },
   "dependencies": {}
 }
