--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,8 +4,8 @@
   "version": "5.0.0-rc.1",
   "type": "module",
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "plop": "plop",
     "pixeleye": "pixeleye storybook http://localhost:6006",
     "build": "gulp",
@@ -18,12 +18,14 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.6",
-    "@storybook/html": "^6.5.15",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-mdx-gfm": "7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/html": "^7.6.17",
+    "@storybook/html-vite": "7.6.17",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.11.18",
     "babel-loader": "^8.3.0",
@@ -40,6 +42,7 @@
     "plop": "^3.1.1",
     "prettier": "2.8.1",
     "sass": "^1.57.1",
+    "storybook": "7.6.17",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
