--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "devDependencies": {
     "lerna": "^6.4.1",
-    "next": "^13.1.2",
-    "pixeleye": "0.2.4"
+    "next": "^13.1.2"
   },
   "dependencies": {}
 }
