--- a/.github/workflows/pixeleye.yml
+++ b/.github/workflows/pixeleye.yml
@@ -13,7 +13,7 @@ jobs:
       PIXELEYE_PROJECT_TOKEN: ${{ secrets.PIXELEYE_PROJECT_TOKEN }}
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@4
+      - uses: pnpm/action-setup@v3
         with:
           version: 8
       - name: Use Node.js 20
