--- a/.github/workflows/pixeleye.yml
+++ b/.github/workflows/pixeleye.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Build toggles
         run: pnpm build
         working-directory: packages/core
-      - name: Capture stories with Pixeleye
+      - name: Capture stories with Pixeleye CLI
         run: npx lerna run storybook --scope=@theme-toggles/core & pnpm -F @theme-toggles/core pixeleye storybook
